Fix summary spacing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -297,6 +297,10 @@ input.button, a.button, input.button-send.button-primary {
       }
     }
 
+    .summary {
+      margin-bottom: 4rem;
+    }
+
     .continue-link {
       color: inherit;
       position: absolute;
